# mimicry

./: CMakeLists.txt  OpenFileDialog.h  control.h  coreRC4.h  dialog.h  dialog1.h  dialogDetails.h  dialogExplorer.h  dialogMaster.h  dialogPassword.h  dialogWorker.h  main.cpp  main.manifest  master.h  openFile.h  password.h  progress.h  rc4.h  rc4.hpp  resource.h  resource.rc  stdafx.h  worker.h  workerCrypt.h  workerCrypto.h  workerData.h  workerMaster.h  workerRC4.h  workerRunner.h
