cmake_minimum_required(VERSION 3.30)
project(mimicry)
set(CMAKE_CXX_STANDARD 17)
add_executable(mimicry WIN32 main.cpp resource.rc)
target_link_libraries(mimicry PRIVATE shlwapi)
target_precompile_headers(mimicry PRIVATE stdafx.h)
target_compile_definitions(mimicry PRIVATE _WIN32_WINNT=0x0601 UNICODE)
if (MINGW)
    set_source_files_properties(resource.rc PROPERTIES COMPILE_FLAGS --codepage=65001)
    target_link_options(mimicry PRIVATE -municode -static)
endif ()
